--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Restaurant</title>
 </head>
 <body>
+    <div class="times">
+        <div class="hrs">00:</div>
+        <div class="mins">00:</div>
+        <div class="secs">00</div>
+    </div>
         <div id="header">
         <img src="cheflogo.png" alt="" class="cheflogo">
         <img src="icon-menu.svg" id="ham">
@@ -87,6 +92,11 @@
 <div> <img src="dish8.jpg" value="lunch" class="first lunch" id="resize"></div>
 <div> <img src="dish6.jpg" value="lunch" class="first lunch" id="resize"></div>
 </div>
+<div id="resized">
+    <div> <img src="dish 10.jpg"value="dinner" class="first dinner" id="resize"></div>
+    <div> <img src="dish 11.jpg" value="dinner" class="first dinner" id="resize"></div>
+    <div> <img src="dish 12.jpg" value="breakfast" class="first breakfast" id="resize"></div>
+    </div>
 </div>
 
 </div>
@@ -160,8 +170,10 @@ Cuisine is a team work of Cuisine Restaurant </p>
     </div>
 <div  class="sub" id="space">
     <h3 class="finaltext"> Subscribe News Letter</h3>
+    <div class="group">
     <input type="text" placeholder="Email Address" id="input">
-    <button type="submit" id="submit">SUBMIT</button>
+    <div type="submit" id="submit">SUBMIT</div>
+    </div>
 </div>
 </div>
 
