--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Restaurant</title>
 </head>
 <body>
-    <div class="times">
-        <div class="hrs">00:</div>
-        <div class="mins">00:</div>
-        <div class="secs">00</div>
-    </div>
+
         <div id="header">
         <img src="cheflogo.png" alt="" class="cheflogo">
         <img src="icon-menu.svg" id="ham">
@@ -127,7 +123,13 @@
  <h1 class="say"> Customer Review</h1>
 
  <img src="james.jpg" alt="" class="customer"> 
+ <div id="direction">
+    <img src="icon-previous.svg" alt="" srcset="" id="previous">
+    <img src="icon-next.svg" alt="" srcset="" id="next">
+   
+ </div>
  <div class="both">
+
  <h3 class="name"> Mr John Smith</h3>
 
  <p class="review"> Delicious, boneless chicken breasts and fresh mushrooms in garlic and white wine <br>
@@ -185,7 +187,7 @@ Cuisine is a team work of Cuisine Restaurant </p>
 
 </div>
 
-</div> -->
+</div> 
 
      
 
@@ -199,7 +201,7 @@ Cuisine is a team work of Cuisine Restaurant </p>
 
 
 
-
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Space+Mono&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style.css">
 <script src="app.js "></script>
