--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         To Our Cuisine<br>
         Restaurant
     </div> <br>
-    <div>
-        <input type="search" name="restaurant"  placeholder="Search here" id="search"> 
+    <div class="motto">
+     <i>We want to see you again.....</i>
     </div>
 
    
@@ -75,23 +75,23 @@
 <div class="dish"> 
     <div id="resized">
 <div> <img src="dish1.jpg" value="breakfast" class="first brk" id="resize"></div>
-<div> <img src="dish2.jpg" value="breakfast" class="first lunch" id="resize"></div>
-<div> <img src="dish3.jpg" value="breakfast"class="first dinner" id="resize" ></div> 
+<div> <img src="dish2.jpg" value="breakfast" class="first brk" id="resize"></div>
+<div> <img src="dish3.jpg" value="breakfast"class="first brk" id="resize" ></div> 
 </div>
 <div  id="resized">
 <div> <img src="dish4.jpg" value="lunch" class="first brk" id="resize"> </div>
-<div> <img src="dish5.jpg" value="lunch" class="first brk" id="resize"></div>
+<div> <img src="dish5.jpg" value="lunch" class="first lunch" id="resize"></div>
 <div> <img src="dish6.jpg" value="dinner" class="first lunch" id="resize"></div>
 </div>
 <div id="resized">
-<div> <img src="dish7.jpg"value="dinner" class="first dinner" id="resize"></div>
+<div> <img src="dish7.jpg"value="dinner" class="first lunch" id="resize"></div>
 <div> <img src="dish8.jpg" value="lunch" class="first lunch" id="resize"></div>
-<div> <img src="dish6.jpg" value="lunch" class="first lunch" id="resize"></div>
+<div> <img src="dish6.jpg" value="lunch" class="first dinner" id="resize"></div>
 </div>
 <div id="resized">
     <div> <img src="dish 10.jpg"value="dinner" class="first dinner" id="resize"></div>
     <div> <img src="dish 11.jpg" value="dinner" class="first dinner" id="resize"></div>
-    <div> <img src="dish 12.jpg" value="breakfast" class="first breakfast" id="resize"></div>
+    <div> <img src="dish 12.jpg" value="breakfast" class="first dinner" id="resize"></div>
     </div>
 </div>
 
@@ -136,14 +136,7 @@
 Cuisine is a team work of Cuisine Restaurant </p>
 
 </div>
-<div class="circle">
-    <div class="c"></div>
-    <div class="c" id="ci"></div>
-    <div class="c"></div>
-    <div class="c"></div>
-    <div class="c"></div>
-    <div class="c"></div>
-</div>
+
 </div>
 
 <div class="box6">
@@ -170,8 +163,8 @@ Cuisine is a team work of Cuisine Restaurant </p>
 
     
     </div>
-<div  class="sub" id="space">
-    <h3 class="finaltext"> Subscribe News Letter</h3>
+<div  class="sub" id="spaces">
+    <h3 class="finaltexts"> Subscribe News Letter</h3>
     <div class="group">
     <input type="text" placeholder="Email Address" id="input">
     <div type="submit" id="submit">SUBMIT</div>
