--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 
  <img src="james.jpg" alt="" class="customer"> 
  <div id="direction">
-    <img src="icon-previous.svg" alt="" srcset="" id="previous">
+
+    <img src="icon-previous.svg" alt="" srcset="" id="previous">   
     <img src="icon-next.svg" alt="" srcset="" id="next">
-   
  </div>
  <div class="both">
 
@@ -151,7 +151,7 @@ Cuisine is a team work of Cuisine Restaurant </p>
 
         <div id="phone">
             <img src="phone.png" alt="" id="imgp"> <br>
-            <b class="dits">08132345656y</b>
+            <b class="dits">08132345656</b>
         </div>
 
         <div id="mail">
